--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "rxjs": "^7.2.0",
     "speakeasy": "^2.0.0",
     "ts-morph": "^15.1.0",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
